Remove galleries: baseline-web, copyright-test, dec-2024-test, encrypted-test, test-export, test-minimal-web, test-refactored-web

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
     <h1>Roam Photo Galleries</h1>
     <div class="gallery-list">
         <div class="gallery-item">
+            <a href="phase1-web-test/index.html" class="gallery-name">phase1-web-test</a>
+            <span class="gallery-date">2025-12-04 14:39:35</span>
+        </div>
+        <div class="gallery-item">
             <a href="2025-italy/index.html" class="gallery-name">2025-italy</a>
             <span class="gallery-date">2025-12-04 14:37:01</span>
         </div>
@@ -104,7 +108,7 @@
     </div>
     <footer>
         <p>© 2025 UniYatra Group, LLC - info@uniyatra.com</p>
-        <p>Last updated: 2025-12-04 14:37:41</p>
+        <p>Last updated: 2025-12-04 14:39:35</p>
     </footer>
 </body>
 </html>
